--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="text-white">
                 <h1 class="mb-3">Loading...</h1>
                 <h4 class="mb-3">Loading...</h4>
-                <a class="btn btn-outline-light btn-lg" href="#!" role="button">
+                <a class="btn btn-outline-light btn-lg" href="#" role="button">
                     Loading...
                 </a>
             </div>
