--- a/tarefas.html
+++ b/tarefas.html
@@ -12,6 +12,13 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tarefas.css">
+
+    <!-- [Bootstrap] -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- [Bootstrap icons] -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- [Font Awesome] -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
           integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -27,33 +34,76 @@
 
 <body>
 
-<div class="pai-container">
+<div class="todo-container">
+
     <header>
         <h1>Gerenciador de Tarefas</h1>
     </header>
-    <form id="pai-form">
-        <p>Adicione a tarefa:</p>
-        <div class="form-control">
-            <label for="input-tarefa"></label>
-            <input type="text" id="input-tarefa" placeholder="Qual a sua tarefa?">
-            <button type="submit"><i class="fa-thin fa-plus"></i></button>
+
+    <form id="todo-form">
+        <p>Coloque a Tarefa desejada:</p>
+        <div class="input-group mb-3">
+            <div class="form-outline">
+                <input class="form-control" type="text" id="todo-input" placeholder="Qual a sua tarefa?"/>
+                <label class="form-label" for="todo-input">Adicione sua tarefa</label>
+            </div>
+            <button class="btn" type="submit">
+                <i class="fa-thin fa-plus"></i>
+            </button>
         </div>
     </form>
 
-    <form id="edit-form">
-        <p>Editar Tarefa:</p>
+    <form id="edit-form" class="hide">
+        <p>Edite sua tarefa</p>
         <div class="form-control">
-            <label for="input-edit"></label>
-            <input type="text" id="input-edit" placeholder="Qual a sua tarefa?">
-            <button type="submit"><i class="fa-solid fa-check-double"></i></button>
+            <label class="form-label" for="edit-input">Edite sua tarefa</label>
+            <input type="text" id="edit-input"/>
+            <button type="submit">
+                <i class="fa-solid fa-check-double"></i>
+            </button>
         </div>
+        <button id="cancel-edit-btn">Cancelar</button>
     </form>
 
-    <div>
-        <h4>Pesquisar</h4>
-        <form>
+    <div id="toolbar">
+        <div id="search">
+            <h4>Pesquisar:</h4>
+            <form>
+                <label class="form-label" for="search-input"></label>
+                <input class="form-control" type="text" id="search-input" placeholder="Buscar"/>
+                <button id="erase-button">
+                    <i class="fa-solid fa-delete-left"></i>
+                </button>
+            </form>
+        </div>
 
-        </form>
+        <div id="filter">
+            <h4>Filtrar:</h4>
+            <label class="form-label" for="filter-select"></label>
+            <select class="form-select" id="filter-select">
+                <option selected disabled>Ação</option>
+                <option value="all">Todos</option>
+                <option value="done">Feitos</option>
+                <option value="todo">A fazer</option>
+            </select>
+        </div>
+    </div>
+    <div id="todo-list">
+        <!--
+          Template
+
+          <div class="todo">
+          <h3>Estou fazendo algo aqui...</h3>
+          <button class="finish-todo">
+            <i class="fa-solid fa-check"></i>
+          </button>
+          <button class="edit-todo">
+            <i class="fa-solid fa-pen"></i>
+          </button>
+          <button class="remove-todo">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div> -->
     </div>
 </div>
 
