--- a/tarefas.html
+++ b/tarefas.html
@@ -44,8 +44,8 @@
         <p>Coloque a Tarefa desejada:</p>
         <div class="input-group mb-3">
             <div class="form-outline">
-                <input class="form-control" type="text" id="todo-input" placeholder="Qual a sua tarefa?"/>
-                <label class="form-label" for="todo-input">Adicione sua tarefa</label>
+                <input class="form-control" type="text" id="todo-input" placeholder="Adicone a sua tarefa"/>
+                <label class="form-label" for="todo-input">Qual é a nova tarefa?</label>
             </div>
             <button class="btn" type="submit">
                 <i class="fa-thin fa-plus"></i>
@@ -58,7 +58,7 @@
         <div class="input-group mb-3">
             <div class="form-outline">
                 <input class="form-control" type="text" id="edit-input"/>
-                <label class="form-label" for="edit-input">Edite sua tarefa</label>
+                <label class="form-label" for="edit-input"></label>
             </div>
             <button class="btn btn-Success" type="submit">
                 <i class="fa-solid fa-check-double"></i>
@@ -90,22 +90,21 @@
             </select>
         </div>
     </div>
-    <div id="todo-list">
-        <!--
-          Template
 
-          <div class="todo">
-          <h3>Estou fazendo algo aqui...</h3>
-          <button class="finish-todo">
-            <i class="fa-solid fa-check"></i>
-          </button>
-          <button class="edit-todo">
-            <i class="fa-solid fa-pen"></i>
-          </button>
-          <button class="remove-todo">
-            <i class="fa-solid fa-xmark"></i>
-          </button>
-        </div> -->
+    <div id="todo-list">
+<!--        Template-->
+<!--        <div class="todo">-->
+<!--            <h3>Estou fazendo algo aqui...</h3>-->
+<!--            <button class="finish-todo">-->
+<!--                <i class="fa-solid fa-check"></i>-->
+<!--            </button>-->
+<!--            <button class="edit-todo">-->
+<!--                <i class="fa-solid fa-pen"></i>-->
+<!--            </button>-->
+<!--            <button class="remove-todo">-->
+<!--                <i class="fa-solid fa-xmark"></i>-->
+<!--            </button>-->
+<!--        </div>-->
     </div>
 </div>
 
