aplicando o gerenciador tarefas

--- a/tarefas.html
+++ b/tarefas.html
@@ -34,12 +34,14 @@
 
 <body>
 
+<!-- [Inicio do corpo] -->
 <div class="todo-container">
 
     <header>
         <h1>Gerenciador de Tarefas</h1>
     </header>
 
+    <!-- [Adicionar tarefa] -->
     <form id="todo-form">
         <p>Coloque a Tarefa desejada:</p>
         <div class="input-group mb-3">
@@ -53,6 +55,7 @@
         </div>
     </form>
 
+    <!-- [Edição de tarefa] -->
     <form id="edit-form" class="hide">
         <p>Edite sua tarefa</p>
         <div class="input-group mb-3">
@@ -67,6 +70,7 @@
         <button class="btn btn-danger" id="cancel-edit-btn">Cancelar</button>
     </form>
 
+    <!-- [Pesquisa tarefa] -->
     <div id="toolbar">
         <div id="search">
             <h4>Pesquisar:</h4>
@@ -79,6 +83,7 @@
             </form>
         </div>
 
+        <!-- [Filtros] -->
         <div id="filter">
             <h4>Filtrar:</h4>
             <label class="form-label" for="filter-select"></label>
@@ -107,7 +112,7 @@
 <!--        </div>-->
     </div>
 </div>
-
+<!-- [Fim do corpo] -->
 </body>
 
 <!-- [MDB] -->
