--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/RaphaelTW?tab=repositories">Projetos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="tarefas.html">Tarefas</a>
+                    </li>
                 </ul>
                 <!-- [Fim links esquerdos] -->
             </div>
