--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="Raphael Laurentino">
-    <link rel="shortcut icon" href="img/logo-laurentino.png">
-
+    <meta name="google" content="notranslate">
     <title>Raphael Laurentino</title>
-
+    <!-- [Links Globais] -->
+    <link rel="shortcut icon" href="img/logo-laurentino.png">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <!-- [Estilos internos] -->
+    <!-- [Estilos Internos] -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- [Bootstrap icons] -->
+    <!-- [Bootstrap Icons] -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <!-- [Unicons de Icons do Iconscout] -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- [Font Awesome] -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <!-- [Google Fonts] -->
@@ -29,6 +31,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
 
 </head>
+
+<body>
 
 <header>
 
@@ -103,7 +107,7 @@
                             <a class="dropdown-item" href="#">Novidades</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">Outra coisa aqui</a>
+                            <a class="dropdown-item" href="#">Outras coisa aqui</a>
                         </li>
                     </ul>
                 </div>
@@ -147,28 +151,46 @@
 
 </header>
 
-<body>
-
-<!-- [Inicio da div imagem de fundo] -->
-<div class="p-5 text-center bg-image" style="
-      background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
+<!-- [Inicio da div imagem de fundo]-->
+<div class="hero-full-container background-image-container white-text-container">
+    <div class="p-5 text-center bg-image white-text-container" style="
+      background-image: url('img/espaço.jpg');
       height: 400px;
       margin-top: 58px;">
-    <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-        <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
-                <h1 class="mb-3">Loading...</h1>
-                <h4 class="mb-3">Loading...</h4>
-                <a class="btn btn-outline-light btn-lg" href="#" role="button">
-                    Loading...
-                </a>
+
+        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="hero-full-wrapper">
+                            <div class="text-content">
+                                <h1>Oi, eu sou o Goku!<br>
+                                    <span id="typed-strings">
+                                        <span>Eu sou o Raphael</span>
+                                        <span>Sou desenvolvedor Front-end</span>
+                                        <span>Trabalhando como freelancer</span>
+                                    </span>
+                                    <span id="typed"></span>
+                                </h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-white">
+                    <h1 class="mb-3">Loading...</h1>
+                    <h4 class="mb-3">Loading...</h4>
+                    <a class="btn btn-outline-light btn-lg" href="#" role="button">
+                        Loading...
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<!-- [Fim da div imagem de fundo] -->
-
-</body>
+<!-- [Fim da div imagem de fundo]-->
 
 <!-- [Inicio rodapé] -->
 <footer class="bg-dark text-center text-white">
@@ -240,5 +262,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+        type();
+        movingBackgroundImage();
+    });
+</script>
+
+<script type="text/javascript" src="js/main.70a66962.js"></script>
+
+</body>
 
 </html>
