--- a/tarefas.html
+++ b/tarefas.html
@@ -10,10 +10,15 @@
 
     <title>Gerenciador de Tarefas</title>
 
+    <!-- [Links Globais] -->
+    <link rel="shortcut icon" href="img/logo-laurentino.png">
     <link rel="stylesheet" href="css/reset.css">
+    <!-- [Estilos Internos] -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <!-- [Estilos da Página Atual] -->
     <link rel="stylesheet" href="css/tarefas.css">
-
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -33,6 +38,123 @@
 </head>
 
 <body>
+
+<header>
+
+    <!-- [Inicio navbar] -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <!-- [Inicio envoltório de contêiner] -->
+        <div class="container-fluid">
+            <!-- [Botão de alternância] -->
+            <button class="navbar-toggler"
+                    type="button"
+                    data-mdb-toggle="collapse"
+                    data-mdb-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <i class="fas fa-bars"></i>
+            </button>
+
+            <!-- [Inico invólucro dobrável] -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- [Marca da barra de navegação]-->
+                <a class="navbar-brand mt-2 mt-lg-0" href="index.html">
+                    <img src="img/logo-laurentino.png"
+                         height="40"
+                         alt="MDB Logo"
+                         loading="lazy"
+                    />
+                </a>
+                <!-- [Inicio links esquerdos] -->
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Painel</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Equipe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/RaphaelTW?tab=repositories">Projetos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="tarefas.html">Tarefas</a>
+                    </li>
+                </ul>
+                <!-- [Fim links esquerdos] -->
+            </div>
+            <!-- [Fim invólucro dobrável] -->
+
+            <!-- [Inicio lementos] -->
+            <div class="d-flex align-items-center">
+
+                <!-- [Notificações] -->
+                <div class="dropdown">
+                    <a class="link-secondary me-3 dropdown-toggle hidden-arrow"
+                       href="#"
+                       id="navbarDropdownMenuLink"
+                       role="button"
+                       data-mdb-toggle="dropdown"
+                       aria-expanded="false"
+                    >
+                        <i class="fas fa-bell"></i>
+                        <span class="badge rounded-pill badge-notification bg-danger">1</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end"
+                        aria-labelledby="navbarDropdownMenuLink"
+                    >
+                        <li>
+                            <a class="dropdown-item" href="https://news.google.com/home?hl=pt-BR&gl=BR&ceid=BR:pt-419">Algumas
+                                notícias</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">Novidades</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">Outras coisa aqui</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- [Avatar] -->
+                <div class="dropdown">
+                    <a class="dropdown-toggle d-flex align-items-center hidden-arrow"
+                       href="#"
+                       id="navbarDropdownMenuAvatar"
+                       role="button"
+                       data-mdb-toggle="dropdown"
+                       aria-expanded="false"
+                    >
+                        <img src="img/avatar.png"
+                             class="rounded-circle"
+                             height="25"
+                             alt="Black and White Portrait of a Man"
+                             loading="lazy"
+                        />
+                    </a>
+
+                    <ul class="dropdown-menu dropdown-menu-end"
+                        aria-labelledby="navbarDropdownMenuAvatar">
+                        <li>
+                            <a class="dropdown-item" href="#">Meu Perfil</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">Configurações</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="https://www.google.com/">Sair</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- [Fim Elementos] -->
+        </div>
+        <!-- [Fim envoltório de contêiner] -->
+    </nav>
+    <!-- [Fim navbar] -->
+
+</header>
 
 <!-- [Inicio do corpo] -->
 <div class="todo-container">
@@ -97,23 +219,34 @@
     </div>
 
     <div id="todo-list">
-<!--        Template-->
-<!--        <div class="todo">-->
-<!--            <h3>Estou fazendo algo aqui...</h3>-->
-<!--            <button class="finish-todo">-->
-<!--                <i class="fa-solid fa-check"></i>-->
-<!--            </button>-->
-<!--            <button class="edit-todo">-->
-<!--                <i class="fa-solid fa-pen"></i>-->
-<!--            </button>-->
-<!--            <button class="remove-todo">-->
-<!--                <i class="fa-solid fa-xmark"></i>-->
-<!--            </button>-->
-<!--        </div>-->
+        <!--        Template-->
+        <!--        <div class="todo">-->
+        <!--            <h3>Estou fazendo algo aqui...</h3>-->
+        <!--            <button class="finish-todo">-->
+        <!--                <i class="fa-solid fa-check"></i>-->
+        <!--            </button>-->
+        <!--            <button class="edit-todo">-->
+        <!--                <i class="fa-solid fa-pen"></i>-->
+        <!--            </button>-->
+        <!--            <button class="remove-todo">-->
+        <!--                <i class="fa-solid fa-xmark"></i>-->
+        <!--            </button>-->
+        <!--        </div>-->
     </div>
 </div>
 <!-- [Fim do corpo] -->
 </body>
+
+<!-- [Inicio rodapé] -->
+<footer class="rodape text-center text-white">
+    <!-- [Inicio Copyright] -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2023 Copyright:
+        <a class="text-white" href="https://raphael-laurentino.netlify.app/">Raphael Laurentino</a>
+    </div>
+    <!-- [Fim Copyright] -->
+</footer>
+<!-- [Fim rodapé] -->
 
 <!-- [MDB] -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
