--- a/contatos.html
+++ b/contatos.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Raphael Laurentino">
     <meta name="google" content="notranslate">
 
-    <title>Raphael Laurentino</title>
+    <title>Contatos</title>
 
     <!-- [Links Globais] -->
     <link rel="shortcut icon" href="img/logo-laurentino.png">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- [Estilos da Página Atual] -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="">
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -32,6 +32,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- [MDB] -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
+
+    <link href="css/bootstrap.css.map" rel="stylesheet">
 
 </head>
 
@@ -163,46 +165,82 @@
     <!-- [Fim navbar] -->
 </header>
 
-<!-- [Inicio da div imagem de fundo]-->
-<div class="hero-full-container background-image-container white-text-container">
-    <div class="p-5 text-center bg-image white-text-container" style="
-      background-image: url('img/espaço.jpg');
-      height: 400px;
-      margin-top: 58px;">
+<div class="section-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="section-container-spacer text-center">
+                    <h1 class="h2">03 : Contact me</h1>
+                </div>
 
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-            <div class="container">
                 <div class="row">
-                    <div class="col-xs-12">
-                        <div class="hero-full-wrapper">
-                            <div class="text-content">
-                                <h1>Oi, eu sou o Goku!<br>
-                                    <span id="typed-strings">
-                                        <span>Eu sou o Raphael</span>
-                                        <span>Sou desenvolvedor Front-end</span>
-                                        <span>Trabalhando como freelancer</span>
-                                    </span>
-                                    <span id="typed"></span>
-                                </h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    <div class="col-md-10 col-md-offset-1">
+                        <form action="" class="reveal-content">
+                            <div class="row">
+                                <div class="col-md-7">
+                                    <div class="form-group">
+                                        <label></label>
+                                        <input type="email" class="form-control" id="email" placeholder="Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label></label>
+                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                    </div>
+                                    <div class="form-group">
+                                        <label></label>
+                                        <textarea class="form-control" rows="5"
+                                                  placeholder="Enter your message"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-default btn-lg">Send</button>
+                                </div>
 
-            <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-white">
-                    <h1 class="mb-3">Loading...</h1>
-                    <h4 class="mb-3">Loading...</h4>
-                    <a class="btn btn-outline-light btn-lg" href="#" role="button">
-                        Loading...
-                    </a>
+                                <div class="col-md-5 address-container">
+                                    <ul class="list-unstyled">
+                                        <li>
+                                            <span class="fa-icon">
+                                                <i class="fa fa-phone" aria-hidden="true"></i>
+                                            </span>
+                                            + 55 011 9-4321-1234
+                                        </li>
+
+                                        <li>
+                                            <span class="fa-icon">
+                                                <i class="fa fa-at" aria-hidden="true"></i>
+                                            </span>
+                                            e-mail@e-mail.com
+                                        </li>
+
+                                        <li>
+                                            <span class="fa-icon">
+                                                <i class="fa fa fa-map-marker" aria-hidden="true"></i>
+                                            </span>
+                                            Rua Nome da rua, 1787 São Paulo-SP
+                                        </li>
+                                    </ul>
+
+                                    <h3>Nossas redes sociais</h3>
+                                    <a href="#" title="" class="fa-icon">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                    <a href="#" title="" class="fa-icon">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                    <a href="#" title="" class="fa-icon">
+                                        <i class="fa fa-linkedin"></i>
+                                    </a>
+
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
                 </div>
+
             </div>
         </div>
     </div>
 </div>
-<!-- [Fim da div imagem de fundo]-->
+
 
 <!-- [Inicio rodapé] -->
 <footer class="text-center text-white">
