--- a/tarefas.html
+++ b/tarefas.html
@@ -72,9 +72,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Painel</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Equipe</a>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Equipe
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Contatos</a></li>
+                            <li><a class="dropdown-item" href="#">Conheça os membos</a></li>
+                            <li><a class="dropdown-item" href="sobre.html">Quem Somos</a></li>
+                        </ul>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/RaphaelTW?tab=repositories">Projetos</a>
                     </li>
