--- a/contatos.html
+++ b/contatos.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- [Estilos da Página Atual] -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="contato.css">
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -170,7 +170,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="section-container-spacer text-center">
-                    <h1 class="h2">03 : Contact me</h1>
+                    <h1 class="hs">Entre em Contato</h1>
                 </div>
 
                 <div class="row">
@@ -179,19 +179,19 @@
                             <div class="row">
                                 <div class="col-md-7">
                                     <div class="form-group">
-                                        <label></label>
-                                        <input type="email" class="form-control" id="email" placeholder="Email">
+                                        <label class="form-label" for="email">E-mail</label>
+                                        <input class="form-control" type="email" id="email" placeholder="Digite seu melhor e-mail">
                                     </div>
                                     <div class="form-group">
-                                        <label></label>
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                        <label class="form-label" for="subject">Assunto</label>
+                                        <input class="form-control" type="text" id="subject" placeholder="Qual é o assunto?">
                                     </div>
                                     <div class="form-group">
-                                        <label></label>
-                                        <textarea class="form-control" rows="5"
-                                                  placeholder="Enter your message"></textarea>
+                                        <label class="form-label" for="msg">Texto</label>
+                                        <textarea class="form-control" rows="5" id="msg"
+                                                  placeholder="Digite sua mensagem"></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-default btn-lg">Send</button>
+                                    <button type="submit" class="btn btn-success">Enviar</button>
                                 </div>
 
                                 <div class="col-md-5 address-container">
@@ -218,7 +218,7 @@
                                         </li>
                                     </ul>
 
-                                    <h3>Nossas redes sociais</h3>
+                                    <h3 class="hs">Nossas redes sociais</h3>
                                     <a href="#" title="" class="fa-icon">
                                         <i class="fa fa-facebook"></i>
                                     </a>
