--- a/contatos.html
+++ b/contatos.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- [Estilos da Página Atual] -->
-    <link rel="stylesheet" href="contato.css">
+    <link rel="stylesheet" href="css/contato.css">
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -180,11 +180,13 @@
                                 <div class="col-md-7">
                                     <div class="form-group">
                                         <label class="form-label" for="email">E-mail</label>
-                                        <input class="form-control" type="email" id="email" placeholder="Digite seu melhor e-mail">
+                                        <input class="form-control" type="email" id="email"
+                                               placeholder="Digite seu melhor e-mail">
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label" for="subject">Assunto</label>
-                                        <input class="form-control" type="text" id="subject" placeholder="Qual é o assunto?">
+                                        <input class="form-control" type="text" id="subject"
+                                               placeholder="Qual é o assunto?">
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label" for="msg">Texto</label>
@@ -240,7 +242,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- [Inicio rodapé] -->
 <footer class="text-center text-white">
