--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Raphael Laurentino">
     <meta name="google" content="notranslate">
 
-    <title>Contatos</title>
+    <title>Sobre</title>
 
     <!-- [Links Globais] -->
     <link rel="shortcut icon" href="img/logo-laurentino.png">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- [Estilos da Página Atual] -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/sobre.css">
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -32,8 +32,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- [MDB] -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
-
-    <link href="css/bootstrap.css" rel="stylesheet">
 
 </head>
 
@@ -177,7 +175,7 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <div class="row">
-                            <div class="col-xs-12 col-md-6">
+                            <div class="col-xs-12 col-md-6 texto">
                                 <h3>História</h3>
                                 <p>.</p>
 
