--- a/tarefas.html
+++ b/tarefas.html
@@ -40,7 +40,6 @@
 <body>
 
 <header>
-
     <!-- [Inicio navbar] -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <!-- [Inicio envoltório de contêiner] -->
@@ -61,7 +60,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- [Marca da barra de navegação]-->
                 <a class="navbar-brand mt-2 mt-lg-0" href="index.html">
-                    <img src="img/logo-laurentino.png"
+                    <img class="logo" src="img/logo-laurentino.png"
                          height="40"
                          alt="MDB Logo"
                          loading="lazy"
@@ -79,9 +78,10 @@
                             Equipe
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Contatos</a></li>
-                            <li><a class="dropdown-item" href="#">Conheça os membos</a></li>
+                            <li><a class="dropdown-item" href="contatos.html">Contatos</a></li>
                             <li><a class="dropdown-item" href="sobre.html">Quem Somos</a></li>
+                            <li><a class="dropdown-item" href="#">Nossos Trabalhos</a></li>
+                            <li><a class="dropdown-item" href="#">Conheça os membos</a></li>
                         </ul>
                     </li>
 
@@ -163,7 +163,6 @@
         <!-- [Fim envoltório de contêiner] -->
     </nav>
     <!-- [Fim navbar] -->
-
 </header>
 
 <!-- [Inicio do corpo] -->
