criação das páginas trabalhos e descobrir, da página criação foi o maior foco de hoje

--- a/contatos.html
+++ b/contatos.html
@@ -13,6 +13,8 @@
     <!-- [Links Globais] -->
     <link rel="shortcut icon" href="img/logo-laurentino.png">
     <link rel="stylesheet" href="css/reset.css">
+    <!-- [Estilo Importado] -->
+    <link href="css/main.3f6952e4.css" rel="stylesheet">
     <!-- [Estilos Internos] -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/navbar.css">
@@ -80,7 +82,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="contatos.html">Contatos</a></li>
                             <li><a class="dropdown-item" href="sobre.html">Quem Somos</a></li>
-                            <li><a class="dropdown-item" href="#">Nossos Trabalhos</a></li>
+                            <li><a class="dropdown-item" href="trabalhos.html">Nossos Trabalhos</a></li>
                             <li><a class="dropdown-item" href="#">Conheça os membos</a></li>
                         </ul>
                     </li>
