--- a/descobrir.html
+++ b/descobrir.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="Raphael Laurentino">
-    <link rel="shortcut icon" href="img/logo-laurentino.png">
+    <meta name="google" content="notranslate">
 
-    <title>Gerenciador de Tarefas</title>
+    <title>Raphael Laurentino</title>
 
     <!-- [Links Globais] -->
     <link rel="shortcut icon" href="img/logo-laurentino.png">
@@ -20,22 +20,20 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- [Estilos da Página Atual] -->
-    <link rel="stylesheet" href="css/tarefas.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- [Bootstrap icons] -->
+    <!-- [Bootstrap Icons] -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <!-- [Unicons de Icons do Iconscout] -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- [Font Awesome] -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <!-- [Google Fonts] -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- [MDB] -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
-
-    <script type="text/javascript" src="js/script.js" defer></script>
 
 </head>
 
@@ -167,91 +165,63 @@
     <!-- [Fim navbar] -->
 </header>
 
-<!-- [Inicio do corpo] -->
-<div class="todo-container">
-
-    <header>
-        <h1>Gerenciador de Tarefas</h1>
-    </header>
-
-    <!-- [Adicionar tarefa] -->
-    <form id="todo-form">
-        <p>Coloque a Tarefa desejada:</p>
-        <div class="input-group mb-3">
-            <div class="form-outline">
-                <input class="form-control" type="text" id="todo-input" placeholder="Adicone a sua tarefa"/>
-                <label class="form-label" for="todo-input">Qual é a nova tarefa?</label>
-            </div>
-            <button class="btn" type="submit">
-                <i class="fa-thin fa-plus"></i>
-            </button>
-        </div>
-    </form>
-
-    <!-- [Edição de tarefa] -->
-    <form id="edit-form" class="hide">
-        <p>Edite sua tarefa</p>
-        <div class="input-group mb-3">
-            <div class="form-outline">
-                <input class="form-control" type="text" id="edit-input"/>
-                <label class="form-label" for="edit-input"></label>
-            </div>
-            <button class="btn btn-Success" type="submit">
-                <i class="fa-solid fa-check-double"></i>
-            </button>
-        </div>
-        <button class="btn btn-danger" id="cancel-edit-btn">Cancelar</button>
-    </form>
-
-    <!-- [Pesquisa tarefa] -->
-    <div id="toolbar">
-        <div id="search">
-            <h4>Pesquisar:</h4>
-            <form>
-                <label class="form-label" for="search-input"></label>
-                <input class="form-control" type="text" id="search-input" placeholder="Buscar"/>
-                <button class="btn" id="erase-button">
-                    <i class="fa-solid fa-delete-left"></i>
-                </button>
-            </form>
-        </div>
-
-        <!-- [Filtros] -->
-        <div id="filter">
-            <h4>Filtrar:</h4>
-            <label class="form-label" for="filter-select"></label>
-            <select class="form-select" id="filter-select">
-                <option selected disabled>Ação</option>
-                <option value="all">Todos</option>
-                <option value="done">Feitos</option>
-                <option value="todo">A fazer</option>
-            </select>
-        </div>
-    </div>
-
-    <div id="todo-list">
-        <!--        Template-->
-        <!--        <div class="todo">-->
-        <!--            <h3>Estou fazendo algo aqui...</h3>-->
-        <!--            <button class="finish-todo">-->
-        <!--                <i class="fa-solid fa-check"></i>-->
-        <!--            </button>-->
-        <!--            <button class="edit-todo">-->
-        <!--                <i class="fa-solid fa-pen"></i>-->
-        <!--            </button>-->
-        <!--            <button class="remove-todo">-->
-        <!--                <i class="fa-solid fa-xmark"></i>-->
-        <!--            </button>-->
-        <!--        </div>-->
-    </div>
-</div>
-<!-- [Fim do corpo] -->
-</body>
-
 <!-- [Inicio rodapé] -->
-<footer class="rodape text-center text-white">
+<footer class="text-center text-white">
+    <!-- [Inicio Recipiente de grade] -->
+    <div class="container p-4 pb-0">
+        <!-- [Inicio seção: mídias sociais] -->
+        <section class="mb-4">
+            <!-- [Facebook] -->
+            <a class="btn btn-outline-light btn-floating m-1"
+               href="https://www.facebook.com/Sputnik.Sovieico?mibextid=ZbWKwL" role="button">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+
+            <!-- [Twitter] -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/Raphael_Laure" role="button">
+                <i class="fab fa-twitter"></i>
+            </a>
+
+            <!-- [VK] -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://vk.com/raphaellaurentino" role="button">
+                <i class="fab fa-bug"></i>
+            </a>
+
+            <!-- [Instagram] -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/raphael.laurentinowski92/"
+               role="button">
+                <i class="fab fa-instagram"></i>
+            </a>
+
+            <!-- [Linkedin] -->
+            <a class="btn btn-outline-light btn-floating m-1"
+               href="https://www.linkedin.com/in/raphael-laurentino-da-silva-84a78a108/" role="button">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+
+            <!-- [Github] -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/RaphaelTW" role="button">
+                <i class="fab fa-github"></i>
+            </a>
+
+            <!-- [Reddit] -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://www.reddit.com/user/Raphaeltw"
+               role="button">
+                <i class="fab fa-reddit"></i>
+            </a>
+
+            <!-- [Spotify] -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://open.spotify.com/user/scar.raphael"
+               role="button">
+                <i class="fab fa-spotify"></i>
+            </a>
+        </section>
+        <!-- [Fim seção: mídias sociais] -->
+    </div>
+    <!-- [Fim recipiente de grade] -->
+
     <!-- [Inicio Copyright] -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="rodape text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 Copyright:
         <a class="text-white" href="https://raphael-laurentino.netlify.app/">Raphael Laurentino</a>
     </div>
@@ -265,5 +235,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+        type();
+        movingBackgroundImage();
+    });
+</script>
+
+<script type="text/javascript" src="js/main.70a66962.js"></script>
+
+</body>
 
 </html>
