--- a/trabalhos.html
+++ b/trabalhos.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Raphael Laurentino">
     <meta name="google" content="notranslate">
 
-    <title>Raphael Laurentino</title>
+    <title>Nossos Trabalhos</title>
 
     <!-- [Links Globais] -->
     <link rel="shortcut icon" href="img/logo-laurentino.png">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- [Estilos da Página Atual] -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/trabalhos.css">
     <!-- [Bootstrap] -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -165,46 +165,130 @@
     <!-- [Fim navbar] -->
 </header>
 
-<!-- [Inicio da div imagem de fundo]-->
-<div class="hero-full-container background-image-container white-text-container">
-    <div class="p-5 text-center bg-image white-text-container" style="
-      background-image: url('img/espaço.jpg');
-      height: 400px;
-      margin-top: 58px;">
+<!--[Inicio container carrossel]-->
+<div class="section-container">
+    <div class="container">
+        <!--[Inicio da linha]-->
+        <div class="row">
 
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="hero-full-wrapper">
-                            <div class="text-content">
-                                <h1>Oi, eu sou o Goku!<br>
-                                    <span id="typed-strings">
-                                        <span>Eu sou o Raphael</span>
-                                        <span>Sou desenvolvedor Front-end</span>
-                                        <span>Trabalhando como freelancer</span>
-                                    </span>
-                                    <span id="typed"></span>
-                                </h1>
+            <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
+                <div class="text-center">
+                    <h1>Nosso trabalho</h1>
+                    <p>Aqui esta uns dos trabalhos já realizado.</p>
+                </div>
+            </div>
+
+            <div class="col-md-12">
+
+                <div id="myCarousel" class="carousel slide projects-carousel">
+
+                    <!--[Inicio itens carrosel]-->
+                    <div class="carousel-inner">
+                        <!--[Inicio itens pág 1]-->
+                        <div class="item active">
+                            <!--[Inicio da linha]-->
+                            <div class="row">
+                                <div class="col-sm-4">
+
+                                    <a href="descobrir.html" title="" class="black-image-project-hover">
+                                        <img src="img/work01-hover.jpg" alt="" class="img-responsive">
+                                    </a>
+                                    <div class="card-container card-container-lg">
+                                        <h3>Exemplo de Trabalho 001</h3>
+                                        <p>Não há nada fácil. Exemplo Texto de Descrição do Trabalho 001.</p>
+                                        <a href="descobrir.html" title="" class="btn btn-light">Descobrir
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-4">
+                                    <a href="descobrir.html" title="" class="black-image-project-hover">
+                                        <img src="img/work02-hover.jpg" alt="" class="img-responsive">
+                                    </a>
+                                    <div class="card-container card-container-lg">
+                                        <h3>Exemplo de Trabalho 002</h3>
+                                        <p>Não há nada fácil. Exemplo Texto de Descrição do Trabalho 002.</p>
+                                        <a href="descobrir.html" title="" class="btn btn-light">Descobrir
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-4">
+                                    <a href="descobrir.html" title="" class="black-image-project-hover">
+                                        <img src="img/work03-hover.jpg" alt="" class="img-responsive">
+                                    </a>
+                                    <div class="card-container card-container-lg">
+                                        <h3>Exemplo de Trabalho 003</h3>
+                                        <p>Não há nada fácil. Exemplo Texto de Descrição do Trabalho 003.</p>
+                                        <a href="descobrir.html" title="" class="btn btn-light">Descobrir
+                                        </a>
+                                    </div>
+                                </div>
+
                             </div>
+                            <!--[Fim da linha]-->
                         </div>
+                        <!--[Fim itens pág 1]-->
+
+                        <!--[Inicio itens pág 2]-->
+                        <div class="item">
+                            <!--[Inicio da linha]-->
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <a href="descobrir.html" class="black-image-project-hover">
+                                        <img src="img/work001-03.jpg" alt="Image" class="img-responsive">
+                                    </a>
+                                    <div class="card-container">
+                                        <h3>Exemplo de Trabalho 004</h3>
+                                        <p>Não há nada fácil. Exemplo Texto de Descrição do Trabalho 004.</p>
+                                        <a href="descobrir.html" title="" class="btn btn-light">Descobrir
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-4">
+                                    <a href="descobrir.html" class="black-image-project-hover">
+                                        <img src="img/work001-02.jpg" alt="Image" class="img-responsive">
+                                    </a>
+                                    <div class="card-container">
+                                        <h3>Exemplo de Trabalho 005</h3>
+                                        <p>Não há nada fácil. Exemplo Texto de Descrição do Trabalho 005.</p>
+                                        <a href="descobrir.html" title="" class="btn btn-light">Descobrir
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-4">
+                                    <a href="descobrir.html" class="black-image-project-hover">
+                                        <img src="img/work001-04.jpg" alt="Image" class="img-responsive">
+                                    </a>
+                                    <div class="card-container">
+                                        <h3>Exemplo de Trabalho 006</h3>
+                                        <p>Não há nada fácil. Exemplo Texto de Descrição do Trabalho 006.</p>
+                                        <a href="descobrir.html" title="" class="btn btn-light">Descobrir
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!--[Fim da linha]-->
+                        </div>
+                        <!--[Fim itens pág 2]-->
                     </div>
+                    <!--[fim itens carrosel]-->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
                 </div>
+
+                <!--[Fim carrossel]-->
             </div>
 
-            <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-white">
-                    <h1 class="mb-3">Loading...</h1>
-                    <h4 class="mb-3">Loading...</h4>
-                    <a class="btn btn-outline-light btn-lg" href="#" role="button">
-                        Loading...
-                    </a>
-                </div>
-            </div>
         </div>
+        <!--[Fim da linha]-->
     </div>
 </div>
-<!-- [Fim da div imagem de fundo]-->
+<!--[Fim container carrossel]-->
 
 <!-- [Inicio rodapé] -->
 <footer class="text-center text-white">
@@ -279,8 +363,7 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", function (event) {
-        type();
-        movingBackgroundImage();
+        navActivePage();
     });
 </script>
 
